<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/receive_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/x10"
        android:text="@string/file_receive"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/x20"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/file_receive_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="文件名：xxx.txt" />

    <TextView
        android:id="@+id/file_receive_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="文件大小：177B" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x20"
        android:layout_marginTop="@dimen/x20"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/file_receive_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:max="100" />

        <TextView
            android:id="@+id/file_receive_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/x10"
            android:text="7%"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/file_receive_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/file_receive_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/x20"
            android:layout_toLeftOf="@+id/file_receive_open"
            android:text="@string/close"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/file_receive_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/x20"
            android:text="@string/open"
            android:textSize="20sp" />
    </RelativeLayout>
</LinearLayout>